# python-project-83

./: README.md  build.sh  database.sql  makefile  pyproject.toml
.github/workflows/: python-ci.yml
page_analyzer/: app.py  repository.py
page_analyzer/static/css/: style.css
page_analyzer/templates/: base.html  index.html  url.html  urls.html
