[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet page analyzer project"
authors = ["Evgenii Akulinin <evgen.ak24@gmail.com>"]
readme = "README.md"
packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
gunicorn = "^21.0.0"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"
validators = "^0.22.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
